external crypto library performance reaches parity.

The default is to build without setting --accel-aes, which uses the
existing Samba software AES implementation.

smb.conf changes
================

  Parameter Name                     Description             Default
  --------------                     -----------             -------

NT4-style replication based net commands removed
================================================

The following commands and sub-commands have been removed from the
"net" utility:

net rpc samdump
net rpc vampire ldif

Also, replicating from a real NT4 domain with "net rpc vampire" and
"net rpc vampire keytab" has been removed.

The NT4-based commands were accidentially broken in 2013, and nobody
noticed the breakage. So instead of fixing them including tests (which
would have meant writing a server for the protocols, which we don't
have) we decided to remove them.

For the same reason, the "samsync", "samdeltas" and "database_redo"
commands have been removed from rpcclient.

"net rpc vampire keytab" from Active Directory domains continues to be
supported.

KNOWN ISSUES
============

https://wiki.samba.org/index.php/Release_Planning_for_Samba_4.8#Release_blocking_bugs


#######################################
Reporting bugs & Development Discussion
#######################################

Please discuss this release on the samba-technical mailing list or by
joining the #samba-technical IRC channel on irc.freenode.net.

If you do report problems then please try to send high quality
feedback. If you don't provide vital information to help us track down
the problem then you will probably be ignored.  All bug reports should
be filed under the Samba 4.1 and newer product in the project's Bugzilla
database (https://bugzilla.samba.org/).


======================================================================
== Our Code, Our Bugs, Our Responsibility.
== The Samba Team